[package]
name = "Hanabi"
version = "0.1.0"
authors = ["Adam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rustc-serialize = "0.3"

actix-web = "2.0.0"
actix-web-actors = "2.0.0"
actix-rt = "1.0.0"
actix = "0.9.0"
